[gd_scene load_steps=7 format=3 uid="uid://b6mcmodpmsacw"]

[ext_resource type="Texture2D" uid="uid://px17kflnvnd7" path="res://Assets/Icons/NodesIcons/Arrow01.svg" id="1_sro87"]
[ext_resource type="Texture2D" uid="uid://bexlgpgwakbrr" path="res://Assets/Icons/NodesIcons/Arrow02.svg" id="2_ruyti"]
[ext_resource type="Script" path="res://Scripts/GraphNodes/DiceRollNode.gd" id="4_4behm"]

[sub_resource type="LabelSettings" id="LabelSettings_01pik"]
line_spacing = 0.0
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_i36fi"]
line_spacing = 0.0
font_color = Color(0.411765, 0.576471, 0.290196, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fvgmo"]
line_spacing = 0.0
font_color = Color(0.788235, 0.380392, 0.380392, 1)

[node name="DiceRoll" type="GraphNode" groups=["graph_nodes"]]
offset_right = 119.0
offset_bottom = 116.0
mouse_default_cursor_shape = 2
title = "DiceRoll"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = ExtResource("1_sro87")
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = ExtResource("2_ruyti")
slot/0/draw_stylebox = false
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = ExtResource("2_ruyti")
slot/1/draw_stylebox = false
script = ExtResource("4_4behm")
titlebar_color = Color(0.607843, 0.34902, 0.713726, 1)

[node name="PassContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="PassValue" type="Label" parent="PassContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "(0%)"
label_settings = SubResource("LabelSettings_01pik")

[node name="PassLabel" type="Label" parent="PassContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Pass"
label_settings = SubResource("LabelSettings_i36fi")

[node name="FailContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="FailValue" type="Label" parent="FailContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "(0%)"
label_settings = SubResource("LabelSettings_01pik")

[node name="FailLabel" type="Label" parent="FailContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Fail"
label_settings = SubResource("LabelSettings_fvgmo")
